--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
-gramine-contrib (1.5post~UNRELEASED) UNRELEASED; urgency=medium
+gramine-contrib (1.6) bookworm bullseye jammy focal; urgency=medium
 
-  *
+  * Initial packaging
+  * Only gramine-ratls-maa is currently built
 
- -- Wojtek Porczyk <woju@invisiblethingslab.com>  Wed, 4 Oct 2023 14:30:00 +0200
+ -- Wojtek Porczyk <woju@invisiblethingslab.com>  Fri, 19 Jan 2024 11:00:00 +0100
