--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gramine-contrib (1.6post~UNRELEASED) UNRELEASED; urgency=medium
+
+  * 
+
+ -- Wojtek Porczyk <woju@invisiblethingslab.com>  Thy, 14 Dec 2023 22:00:01 +0100
+
 gramine-contrib (1.6) bookworm bullseye jammy focal; urgency=medium
 
   * Initial packaging
