--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-gramine-contrib (1.6post~UNRELEASED) UNRELEASED; urgency=medium
+gramine-contrib (1.6.1~rc1) unstable-bookworm unstable-bullseye unstable-jammy unstable-focal; urgency=medium
 
-  * 
+  * Change gramine dependency to (>= 1.6)
 
- -- Wojtek Porczyk <woju@invisiblethingslab.com>  Fri, 19 Jan 2024 11:00:01 +0100
+ -- Wojtek Porczyk <woju@invisiblethingslab.com>  Fri, 23 Feb 2024 17:20:19 +0100
 
 gramine-contrib (1.6) bookworm bullseye jammy focal; urgency=medium
 
