--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+gramine-contrib (1.6.1post~UNRELEASED) UNRELEASED; urgency=medium
+
+
+ -- Wojtek Porczyk <woju@invisiblethingslab.com>  Fri, 23 Feb 2024 17:20:20 +0100
+
 gramine-contrib (1.6.1~rc1) unstable-bookworm unstable-bullseye unstable-jammy unstable-focal; urgency=medium
 
   * Change gramine dependency to (>= 1.6)
