--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+gramine-contrib (1.6.1post~UNRELEASED) UNRELEASED; urgency=medium
+
+
+ -- Wojtek Porczyk <woju@invisiblethingslab.com>  Mon, 26 Feb 2024 12:38:28 +0100
+
 gramine-contrib (1.6.1) bookworm bullseye jammy focal; urgency=medium
 
   * Change gramine dependency to (>= 1.6)
