--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,9 @@
-gramine-contrib (1.6.1post~UNRELEASED) UNRELEASED; urgency=medium
+gramine-contrib (1.7~rc2) unstable-bookworm unstable-bullseye unstable-jammy unstable-focal; urgency=medium
 
+  * version 1.7
+  * added ITA integration
 
- -- Wojtek Porczyk <woju@invisiblethingslab.com>  Mon, 26 Feb 2024 12:38:28 +0100
+ -- Wojtek Porczyk <woju@invisiblethingslab.com>  Tue, 23 Apr 2024 13:33:00 +0200
 
 gramine-contrib (1.6.1) bookworm bullseye jammy focal; urgency=medium
 
