--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gramine-contrib (1.7post~UNRELEASED) UNRELEASED; urgency=medium
+
+  *
+
+ -- Wojtek Porczyk <woju@invisiblethingslab.com>  Tue, 23 Apr 2024 13:33:20 +0200
+
 gramine-contrib (1.7~rc2) unstable-bookworm unstable-bullseye unstable-jammy unstable-focal; urgency=medium
 
   * version 1.7
