--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gramine-contrib (1.7post~UNRELEASED) UNRELEASED; urgency=medium
+
+  *
+
+ -- Wojtek Porczyk <woju@invisiblethingslab.com>  Wed, 24 Apr 2024 09:29:05 +0200
+
 gramine-contrib (1.7) bookworm bullseye jammy focal; urgency=medium
 
   * version 1.7
